--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="bar-option">
       <div class="bar-option__icon">
-        trash
+        trash<fa-icon [icon]="faCoffee"></fa-icon>
       </div>
       <div class="bar-option__icon">
         favourites
